--- a/views/vehicles_page.erb
+++ b/views/vehicles_page.erb
@@ -1,5 +1,8 @@
-<%= # sample output html
-# <h2><%= @message %></h2>
-# <hr>
-# <a href="/" class="btn btn-danger">reset</a>
-%>
+<h1>Vehicles</h1>
+
+<h3>Here are the vehicles on this lot: </h3>
+<ul>
+  <% @vehicles.each() do |vehicle| %>
+    <li><a href="/vehicles/<%= vehicle.id() %>"><%= vehicle.model() %></a></li>
+  <% end %>
+</ul>
