complete the sinatra page linking

--- a/views/singular_vehicle_page.erb
+++ b/views/singular_vehicle_page.erb
@@ -1,5 +1,5 @@
-<h1><%= @vehicles.make() %></h1>
-<h1><%= @vehicles.model() %></h1>
-<h1><%= @vehicles.year() %></h1>
+<h1><%= @vehicle.make() %></h1>
+<h1><%= @vehicle.model() %></h1>
+<h1><%= @vehicle.year() %></h1>
 
 <a href="/">Home</a>
